--- a/components/Main/Research/Research.module.scss
+++ b/components/Main/Research/Research.module.scss
@@ -1,6 +1,4 @@
-@import "/styles/main.scss";
-
-
+@import '/styles/main.scss';
 
 .container {
   position: relative;
@@ -54,7 +52,6 @@
   @include fontRegular(16px, 400, 22.4px);
   @media screen and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 25.2px);
-    max-width: 96%;
   }
 }
 
