--- a/components/Main/StarCustomers/StarCustomers.module.scss
+++ b/components/Main/StarCustomers/StarCustomers.module.scss
@@ -1,5 +1,5 @@
 // @import "swiper/scss/pagination";
-@import "./styles/main.scss";
+@import './styles/main.scss';
 
 .title {
   margin-bottom: 48px;
@@ -23,6 +23,7 @@
   border-radius: 30px;
   background-color: $black;
   width: 328px;
+  min-height: 559px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -32,16 +33,15 @@
   @media screen and (min-width: $min_tablet) {
     padding: 40px 58px;
     width: 356px;
+    min-height: 669px;
   }
   @media screen and (min-width: $min_desktop) {
     padding: 40px 31px;
     width: 302px;
+    
   }
 }
 
-.card_open {
-  background-color: transparent;
-}
 
 .image {
   width: 240px;
