--- a/components/Calculator/SixteenLawsOfKarma/SixteenLawsOfKarmaMatrix.module.scss
+++ b/components/Calculator/SixteenLawsOfKarma/SixteenLawsOfKarmaMatrix.module.scss
@@ -10,8 +10,13 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin-bottom: 40px;
+  @media all and (min-width: $min_tablet) {
+    margin-bottom: 96px;
+  }
   @media all and (min-width: $min_desktop) {
     flex-direction: row;
-    gap: 143px;
+    gap: 113px;
+    margin-bottom: 160px;
   }
 }
