--- a/components/Calculator/SixteenLawsOfKarma/SixteenWorkingCorners/SixteenWorkingCornersGraph/SixteenWorkingCornersGraph.module.scss
+++ b/components/Calculator/SixteenLawsOfKarma/SixteenWorkingCorners/SixteenWorkingCornersGraph/SixteenWorkingCornersGraph.module.scss
@@ -2,7 +2,6 @@
 
 .graph_wrapper {
   position: relative;
-
   @media all and (min-width: $min_tablet) {
     display: flex;
     justify-content: center;
@@ -15,5 +14,14 @@
   @media all and (min-width: $min_tablet) {
     width: 618px;
     height: 716px;
+  }
+}
+
+.title {
+  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
+  @media all and (min-width: $min_tablet) {
+    font-size: 18px;
+    width: 587px;
+    margin-inline: auto;
   }
 }
