added kneeling calc to 9 tribes

--- a/components/Calculator/PersonalMatrix/PeriodMap/PeriodMap.module.scss
+++ b/components/Calculator/PersonalMatrix/PeriodMap/PeriodMap.module.scss
@@ -115,7 +115,7 @@
 }
 
 .active_period {
-  animation: jump 3.3s ease-in-out infinite;
+  border: 2px solid $additional_bg;
 }
 
 .tip {
@@ -131,17 +131,5 @@
     @include fontRegular(18px, 400, 25.2px);
     padding: 8px;
     min-height: 40px;
-  }
-}
-
-@keyframes jump {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.05);
-  }
-  100% {
-    transform: scale(1);
   }
 }
