--- a/components/Calculator/SixteenLawsOfKarma/SixteenLawsPeriods/SixteenLawsStage/SixteenLawsStage.module.scss
+++ b/components/Calculator/SixteenLawsOfKarma/SixteenLawsPeriods/SixteenLawsStage/SixteenLawsStage.module.scss
@@ -11,7 +11,7 @@
     gap: 77px;
     justify-content: center;
   }
-  @media screen and (min-width: $min_desktop) {
+  @media all and (min-width: $min_desktop) {
     gap: 60px;
     justify-content: space-around;
   }
