--- a/components/Services/Offline-meetings/AboutPractice/AboutPractice.module.scss
+++ b/components/Services/Offline-meetings/AboutPractice/AboutPractice.module.scss
@@ -2,6 +2,7 @@
 
 .title {
   margin-bottom: 40px;
+  text-align: center !important;
   @media screen and (min-width: $min_tablet) {
     margin-bottom: 48px;
     text-wrap: balance;
