--- a/components/Services/ServicesForYouIf/ServicesForYouIf.module.scss
+++ b/components/Services/ServicesForYouIf/ServicesForYouIf.module.scss
@@ -1,14 +1,15 @@
-@import "/styles/main.scss";
+@import '/styles/main.scss';
 
 .title {
-  @include fontRegular(28px, 400, 39.2px);
   margin-bottom: 40px;
+  text-align: center !important;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(36px, 400, 36px);
     margin-bottom: 48px;
   }
   @media screen and (min-width: $min_desktop) {
     margin-bottom: 60px;
+    margin-inline: auto;
+    max-width: 910px;
   }
 }
 
