--- a/components/Services/Offline-meetings/AboutRetreat/AboutRetreat.module.scss
+++ b/components/Services/Offline-meetings/AboutRetreat/AboutRetreat.module.scss
@@ -1,22 +1,25 @@
-@import "/styles/main.scss";
+@import '/styles/main.scss';
 
-.container {
-  display: grid;
-  gap: 24px;
-
+.title {
+  text-align: center !important;
+  margin-bottom: 40px;
   @media screen and (min-width: $min_tablet) {
-    gap: 32px;
+    margin-bottom: 48px;
   }
   @media screen and (min-width: $min_desktop) {
-    gap: 0px;
-    align-items: center;
+    margin-bottom: 60px;
   }
 }
 
-.title {
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  @media screen and (min-width: $min_tablet) {
+    gap: 24px;
+  }
   @media screen and (min-width: $min_desktop) {
-    grid-column: 2;
-    grid-row: 1;
+    flex-direction: row-reverse;
   }
 }
 
@@ -30,9 +33,11 @@
 .text_container {
   display: grid;
   gap: 24px;
+  background-color: $card_bg_v2;
+  padding: 24px;
+  border-radius: 30px;
   @media screen and (min-width: $min_desktop) {
-    grid-column: 2;
-    grid-row: 2;
+    width: 737px;
   }
 }
 
@@ -49,8 +54,5 @@
     width: 519px;
     height: 400px;
     object-fit: contain;
-    grid-column: 1;
-    grid-row: 1 / span 2;
-    margin-right: 133px;
   }
 }
