--- a/components/Services/Offline-meetings/Hero/Hero.module.scss
+++ b/components/Services/Offline-meetings/Hero/Hero.module.scss
@@ -1,33 +1,25 @@
-@import "/styles/main.scss";
-
-.container {
-  position: relative;
-  display: grid;
-  gap: 24px;
-  @media screen and (min-width: $min_tablet) {
-    gap: 32px;
-  }
-  @media screen and (min-width: $min_desktop) {
-    grid-template-columns: 1fr 519px;
-  }
-}
-
-.section {
-  overflow: visible;
-}
+@import '/styles/main.scss';
 
 .title {
-  @include fontRegular(28px, 400, 39.2px);
+  text-align: center !important;
+  margin-bottom: 40px;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(36px, 400, 36px);
+    margin-bottom: 48px;
   }
   @media screen and (min-width: $min_desktop) {
-    grid-column: 1;
-    grid-row: 1;
+    margin-bottom: 60px;
+  }
+}
 
-    display: flex;
-    align-items: center;
-    height: 100%;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  @media screen and (min-width: $min_tablet) {
+    gap: 24px;
+  }
+  @media screen and (min-width: $min_desktop) {
+    flex-direction: row;
   }
 }
 
@@ -35,12 +27,13 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  border-radius: 30px;
+  background-color: $card_bg_v2;
+  padding: 24px;
   @media screen and (min-width: $min_tablet) {
     gap: 24px;
-  }
-  @media screen and (min-width: $min_desktop) {
-    grid-column: 1;
-    grid-row: 2;
+    padding: 50px;
+    width: 737px;
   }
 }
 
@@ -53,30 +46,9 @@
 
 .img {
   @media screen and (min-width: $min_desktop) {
-    grid-column: 2;
-    grid-row: 1 / span 2;
-  }
-}
-
-.spot {
-  display: none;
-  @media screen and (min-width: $min_desktop) {
-    position: absolute;
-    display: block;
-
-    top: 13%;
-    left: 5%;
-
-    width: 221px;
-    height: 280px;
-
-    border-radius: 280px;
-    background-image: linear-gradient(
-      180deg,
-      rgba(207, 182, 145, 0.4) 7%,
-      rgba(207, 182, 145, 0.4) 45.14%
-    );
-
-    filter: blur(125px);
+    object-fit: cover;
+    width: 519px;
+    max-height: 493px;
+    border-radius: 30px;
   }
 }
