--- a/components/TherapySessions/IndividualSessions/IndividualSessions.module.scss
+++ b/components/TherapySessions/IndividualSessions/IndividualSessions.module.scss
@@ -1,4 +1,4 @@
-@import "/styles/main.scss";
+@import '/styles/main.scss';
 
 .section {
   @media screen and (min-width: $min_desktop) {
@@ -7,51 +7,57 @@
 }
 
 .title {
-  @include fontRegular(28px, 400, 39.2px);
-  margin-bottom: 24px;
+  margin-bottom: 40px;
+  text-align: center !important;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(36px, 400, 43.2px);
-    margin-bottom: 32px;
+    margin-bottom: 48px;
   }
   @media screen and (min-width: $min_desktop) {
     margin-bottom: 60px;
   }
 }
 
-.article {
-  width: 100%;
+.wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  @media screen and (min-width: $min_desktop) {
+    flex-direction: row-reverse;
+  }
+}
 
-  @include fontRegular(16px, 400, 22.4px, $main_text_color);
-  leading-trim: both;
-  text-edge: cap;
+.article {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 24px;
+  border-radius: 30px;
+  background-color: $card_bg_v2;
+  & > p {
+    @include fontRegular(16px, 400, 22.4px);
+  }
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $main_text_color);
+    padding: 50px;
+    & > p {
+      font-size: 18px;
+    }
   }
   @media screen and (min-width: $min_desktop) {
+    padding: 64px 54px;
     width: 737px;
   }
 }
 
-.wrap {
-  @media screen and (min-width: $min_desktop) {
-    position: relative;
-  }
-}
-
 .image {
-  margin-bottom: 24px;
-  @media screen and (min-width: $min_tablet) and (max-width: 1279px) {
+  border-radius: 30px;
+  height: 169px;
+  object-fit: cover;
+  @media screen and (min-width: $min_tablet) {
+    height: 300px;
     width: 100%;
-    max-width: 736px;
-    height: 380px;
-    margin-bottom: 32px;
   }
   @media screen and (min-width: $min_desktop) {
-    position: absolute;
-    right: 0px;
-    top: -60px;
-    margin-bottom: 0px;
+    width: 519px;
+    height: 620px;
   }
-  object-fit: cover;
-  border-radius: 30px;
 }
