--- a/components/TherapySessions/PairedSessions/PairedSessions.module.scss
+++ b/components/TherapySessions/PairedSessions/PairedSessions.module.scss
@@ -1,63 +1,57 @@
-@import "/styles/main.scss";
-
-
-
-.cont {
-  @media screen and (min-width: $min_desktop) {
-    display: grid;
-    column-gap: 24px;
-  }
-}
+@import '/styles/main.scss';
 
 .title {
-  @include fontRegular(28px, 400, 39.2px);
-  margin-bottom: 24px;
+  margin-bottom: 40px;
+  text-align: center !important;
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(36px, 400, 43.2px);
-    margin-bottom: 32px;
+    margin-bottom: 48px;
   }
   @media screen and (min-width: $min_desktop) {
     margin-bottom: 60px;
-    grid-column: 2;
-    grid-row: 1;
   }
 }
 
 .article {
-  width: 100%;
-
-  @include fontRegular(16px, 400, 22.4px, $main_text_color);
-  leading-trim: both;
-  text-edge: cap;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 24px;
+  border-radius: 30px;
+  background-color: $card_bg_v2;
+  & > p {
+    @include fontRegular(16px, 400, 22.4px);
+  }
   @media screen and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $main_text_color);
+    padding: 50px;
+    & > p {
+      font-size: 18px;
+    }
   }
   @media screen and (min-width: $min_desktop) {
+    padding: 64px 54px;
     width: 737px;
-    grid-column: 2;
-    grid-row: 2;
   }
 }
 
 .wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
   @media screen and (min-width: $min_desktop) {
-    position: relative;
+    flex-direction: row;
   }
 }
 
 .image {
-  margin-bottom: 24px;
-  @media screen and (min-width: $min_tablet) and (max-width: 1279px) {
-    width: 100%;
-    max-width: 736px;
-    height: 380px;
-    margin-bottom: 32px;
-  }
-  @media screen and (min-width: $min_desktop) {
-    margin: auto;
-    grid-column: 1;
-    grid-row: 1 / span 2;
-  }
   object-fit: cover;
   border-radius: 30px;
+  height: 169px;
+  @media screen and (min-width: $min_tablet) {
+    height: 298px;
+    width: 100%;
+  }
+  @media screen and (min-width: $min_desktop) {
+    width: 519px;
+    height: 100%;
+  }
 }
