--- a/components/Education/AccessToTheCourse/AccessToTheCourse.module.scss
+++ b/components/Education/AccessToTheCourse/AccessToTheCourse.module.scss
@@ -1,9 +1,13 @@
-@import "/styles/main.scss";
+@import '/styles/main.scss';
 
 .title {
   margin-bottom: 40px;
+  text-align: center !important;
+  max-width: 280px;
+  margin-inline: auto;
   @media screen and (min-width: $min_tablet) {
     margin-bottom: 60px;
+    max-width: 95%;
   }
   @media screen and (min-width: $min_desktop) {
   }
