--- a/components/Education/WhatIsWaitingForYou/WhatIsWaitingForYou.module.scss
+++ b/components/Education/WhatIsWaitingForYou/WhatIsWaitingForYou.module.scss
@@ -1,4 +1,4 @@
-@import "/styles/main.scss";
+@import '/styles/main.scss';
 
 .section {
   overflow: visible;
@@ -69,6 +69,15 @@
 }
 .column2_text {
   @include fontRegular(16px, 400, 22.4px);
+  @media screen and (min-width: $min_desktop) {
+    max-width: 210px;
+  }
+}
+
+.column2_text_extended {
+  @media screen and (min-width: $min_tablet) {
+    max-width: 493px;
+  }
 }
 
 .warning_margin {
@@ -87,7 +96,6 @@
     text-wrap: balance;
   }
 }
-
 
 .spot {
   display: none;
