--- a/components/HumanPsychology/MissionAssociation/MissionAssociation.module.scss
+++ b/components/HumanPsychology/MissionAssociation/MissionAssociation.module.scss
@@ -20,6 +20,9 @@
 }
 
 .warning {
+  display: flex;
+  gap: 8px;
+  align-items: baseline;
   @include fontRegular(16px, 400, 22.4px);
   margin-bottom: 16px;
   & > a {
@@ -34,9 +37,9 @@
 .about_psycho {
   padding: 30px 24px;
   @include fontRegular(16px, 400, 22.4px, #101010);
-  background-color: $card_bg;
+  background-color: $additional_bg;
   border-radius: 30px;
-  margin-bottom: 16px;
+  margin-bottom: 36px;
   text-wrap: balance;
   & > b {
     font-weight: 600;
@@ -46,10 +49,21 @@
   @media all and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 25.2px, #101010);
     padding: 30px 51.5px;
-    margin-bottom: 24px;
+    margin-bottom: 48px;
   }
   @media all and (min-width: $min_desktop) {
     padding: 30px 77px;
+  }
+}
+
+.mission_title {
+  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
+  margin-bottom: 20px;
+  @media all and (min-width: $min_tablet) {
+    font-size: 18px;
+    margin-bottom: 24px;
+  }
+  @media all and (min-width: $min_desktop) {
   }
 }
 
@@ -72,11 +86,11 @@
   background: #2e2e2e;
   overflow: hidden;
   @media all and (min-width: $min_tablet) {
-    padding: 50px 51.5px;
+    padding: 50px 50px;
   }
   @media all and (min-width: $min_desktop) {
     width: calc((100% - 24px) / 2);
-    padding: 50px 71.5px;
+    padding: 50px 64px;
   }
 }
 
@@ -132,4 +146,9 @@
     right: 10%;
     top: -4%;
   }
+}
+
+.icon {
+  width: 20px;
+  height: 24px;
 }
