--- a/components/HumanPsychology/TasksAssociation/TasksAssociation.module.scss
+++ b/components/HumanPsychology/TasksAssociation/TasksAssociation.module.scss
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-bottom: 36px;
   @media all and (min-width: $min_tablet) {
     gap: 24px;
   }
@@ -160,5 +161,48 @@
   }
   @media all and (min-width: $min_desktop) {
     left: 10%;
+  }
+}
+
+.write_us_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 24px 28px;
+  background-color: $card_bg_v2;
+  border-radius: 30px;
+  @media all and (min-width: $min_tablet) {
+    padding: 30px 50px;
+    align-items: center;
+  }
+  @media all and (min-width: $min_desktop) {
+    flex-direction: row;
+    padding: 24px;
+  }
+}
+
+.write_us_text {
+  @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
+  @media all and (min-width: $min_tablet) {
+    font-size: 18px;
+  }
+}
+
+.write_us_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 52px;
+  background-color: $buttons_color;
+  border-radius: 30px;
+  @include fontRegular(16px, 600, 22.4px, $third_text_color);
+  @media all and (min-width: $min_tablet) {
+    width: 410px;
+    height: 60px;
+    font-size: 18px;
+  }
+  @media all and (min-width: $min_desktop) {
+    flex-shrink: 0;
   }
 }
