--- a/components/Products/GuidesAndBooks/GuidesAndBooks.module.scss
+++ b/components/Products/GuidesAndBooks/GuidesAndBooks.module.scss
@@ -94,10 +94,13 @@
 //info text
 
 .about_guides {
-  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  @include fontRegular(14px, 400, 19.6px, $seconds_text_color, center);
   margin-bottom: 40px;
   @media all and (min-width: $min_tablet) {
-    @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
+    font-size: 16px;
     margin-bottom: 48px;
   }
   @media all and (min-width: $min_desktop) {
