--- a/components/Products/Meditations/Meditations.module.scss
+++ b/components/Products/Meditations/Meditations.module.scss
@@ -99,19 +99,21 @@
 //about arcanes text
 
 .about_arcanes {
-  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
+  @include fontRegular(14px, 400, 19.6px, $seconds_text_color, center);
   margin-bottom: 24px;
   @media all and (min-width: $min_tablet) {
-    @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
+    font-size: 16px;
   }
 
   &_second {
     margin-bottom: 40px;
-    @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
-
+    @include fontRegular(14px, 400, 19.6px, $seconds_text_color, center);
+    & > span {
+      display: block;
+    }
     @media all and (min-width: $min_tablet) {
       margin-bottom: 48px;
-      @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
+      font-size: 16px;
     }
     @media all and (min-width: $min_desktop) {
       margin-bottom: 60px;
