--- a/components/HumanPsychology/AboutFoundation/AboutFoundation.module.scss
+++ b/components/HumanPsychology/AboutFoundation/AboutFoundation.module.scss
@@ -1,17 +1,5 @@
 @import '/styles/main.scss';
 
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  @media all and (min-width: $min_tablet) {
-    gap: 24px;
-  }
-  @media all and (min-width: $min_desktop) {
-    gap: 60px;
-  }
-}
-
 .section {
   display: flex;
   flex-direction: column;
@@ -27,6 +15,17 @@
   }
 }
 
+.title {
+  text-align: center !important;
+  margin-bottom: 40px;
+  @media all and (min-width: $min_tablet) {
+    margin-bottom: 48px;
+  }
+  @media all and (min-width: $min_desktop) {
+    margin-bottom: 60px;
+  }
+}
+
 .article {
   display: flex;
   flex-direction: column;
@@ -34,7 +33,7 @@
   padding: 24px;
 
   border-radius: 30px;
-  background-color: $card_bg;
+  background-color: $card_bg_v2;
   @media all and (min-width: $min_tablet) {
     padding: 60px 54px;
   }
@@ -48,15 +47,12 @@
 }
 
 .text {
-  @include fontRegular(16px, 400, 22.4px, $section_color);
+  @include fontRegular(16px, 400, 22.4px);
   & > a {
     text-decoration: underline;
   }
   @media all and (min-width: $min_tablet) {
-    @include fontRegular(18px, 400, 25.2px, $section_color);
-  }
-  @media all and (min-width: $min_desktop) {
-    @include fontRegular(18px, 400, 25.2px, $section_color);
+    font-size: 18px;
   }
 }
 
