--- a/components/Calculator/CompatibilityMatrix/ResultMatrix/MatrixGraph/MatrixGraph.module.scss
+++ b/components/Calculator/CompatibilityMatrix/ResultMatrix/MatrixGraph/MatrixGraph.module.scss
@@ -31,3 +31,27 @@
     line-height: 1.42 !important;
   }
 }
+
+.inner_key {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  font-size: 10px !important;
+  font-weight: 700 !important;
+  line-height: 28px !important;
+  text-align: center;
+  color: $seconds_text_color !important;
+  top: 28.7%;
+  left: 47.5%;
+  @media all and (min-width: $min_tablet) {
+    width: 30px;
+    font-size: 16px !important;
+    top: 28.8%;
+    left: 48.3%;
+  }
+  @media all and (min-width: $min_desktop) {
+    left: 47.9%;
+  }
+}
