--- a/components/Main/Hero/Hero.module.scss
+++ b/components/Main/Hero/Hero.module.scss
@@ -130,11 +130,50 @@
   }
 }
 
+// @keyframes scaleDown {
+//   0% {
+//     transform: scale(2) translate(20%);
+//     filter: blur(0px);
+//     opacity: 1;
+//   }
+//   15% {
+//     transform: scale(2) translate(20%);
+//     filter: blur(0px);
+//   }
+//   25% {
+//     transform: scale(1) translate(0%);
+//     filter: blur(0px);
+//     opacity: 1;
+//   }
+//   34% {
+//     opacity: 1;
+//   }
+//   35% {
+//     opacity: 0;
+//   }
+//   39% {
+//     opacity: 1;
+//   }
+//   40% {
+//     opacity: 0;
+//   }
+//   45% {
+//     opacity: 1;
+//     transform: scale(1);
+//   }
+//   50% {
+//     transform: scale(1);
+//   }
+//   100% {
+//     transform: scale(1.2);
+//   }
+// }
+
 .bg_logo {
   display: none;
   z-index: 1;
   position: absolute;
-  animation: scaleDown 9s forwards;
+  animation: scaleDown 9s infinite;
   @media screen and (min-width: $min_tablet) {
     display: block;
     width: 675px;
@@ -143,8 +182,7 @@
   }
   @media screen and (min-width: $min_desktop) {
     width: 794px;
-    top: 0%;
+    top: -11%;
     right: -10%;
   }
 }
-
