--- a/components/Main/About/About.module.scss
+++ b/components/Main/About/About.module.scss
@@ -49,7 +49,7 @@
   @include fontRegular(18px, 400, 25.2px);
   margin-bottom: 8px;
   @media all and (min-width: $min_desktop) {
-    font-size: 14px;
+    font-size: 28px;
   }
 }
 
@@ -62,7 +62,7 @@
   }
   @media all and (min-width: $min_desktop) {
     margin-bottom: 0;
-    font-size: 14px;
+    font-size: 20px;
     text-wrap: balance;
   }
 }
@@ -76,7 +76,7 @@
   }
   @media all and (min-width: $min_desktop) {
     transform: translateY(-20px);
-    width: 443px;
+    width: 424px;
     height: 589px;
   }
 }
@@ -90,6 +90,7 @@
   @media all and (min-width: $min_desktop) {
     grid-area: 1 / 1 / 3 / 2;
     align-self: end;
+    justify-content: flex-end;
   }
 }
 
@@ -108,7 +109,7 @@
   }
   @media all and (min-width: $min_desktop) {
     transform: translateY(-20px);
-    padding-bottom: 54px;
+    padding: 54px 40px;
   }
 }
 
@@ -130,6 +131,7 @@
     grid-area: 2 / 2 / 3 / 3;
     display: flex;
     flex-direction: row;
+    margin-bottom: 16px;
   }
 }
 
@@ -138,7 +140,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 28px;
+  gap: 20px;
 
   width: 328px;
   height: 190px;
@@ -148,10 +150,13 @@
   @media all and (min-width: $min_tablet) {
     width: 356px;
     height: 258px;
+    padding: 56px 0px;
+    justify-content: flex-start;
   }
   @media all and (min-width: $min_desktop) {
-    width: 301px;
-    height: 225px;
+    width: 302px;
+    height: 235px;
+    padding: 56px 0px;
   }
 }
 
@@ -159,8 +164,6 @@
   @include fontRegular(28px, 400, 39.2px, $seconds_text_color);
   @media all and (min-width: $min_tablet) {
     @include fontRegular(36px, 400, 36px, $seconds_text_color);
-  }
-  @media all and (min-width: $min_desktop) {
   }
 }
 
@@ -171,9 +174,15 @@
 
 .about_us_fact1 {
   grid-area: 1 / 2 / 2 / 3;
+  @media all and (min-width: $min_desktop) {
+    height: 280px;
+  }
 }
 .about_us_fact2 {
   grid-area: 2 / 2 / 3 / 3;
+  @media all and (min-width: $min_desktop) {
+    height: 280px;
+  }
 }
 .about_us_fact3 {
   grid-area: 3 / 2 / 4 / 3;
@@ -199,8 +208,8 @@
     border-radius: 287px;
     background-image: linear-gradient(
       180deg,
-      rgba(207, 182, 145, 0.5) 7%,
-      rgba(207, 182, 145, 0.5) 45.14%
+      rgb(207, 182, 145) -33.497%,
+      rgba(0, 0, 0, 0) 117.064%
     );
 
     filter: blur(105px);
