--- a/components/Services/ConsultationsTariff/ConsultationsTariff.module.scss
+++ b/components/Services/ConsultationsTariff/ConsultationsTariff.module.scss
@@ -13,6 +13,9 @@
 
 .warning {
   display: none;
+  & > a {
+    text-decoration: underline;
+  }
   @media all and (min-width: $min_tablet) {
     display: block;
     @include fontRegular(18px, 400, 25.2px);
