--- a/components/TherapySessions/Pricing/Pricing.module.scss
+++ b/components/TherapySessions/Pricing/Pricing.module.scss
@@ -30,6 +30,9 @@
 .desc {
   color: $main_text_color;
   @include fontRegular(16px, 400, 22.4px);
+  & > a {
+    text-decoration: underline;
+  }
   @media all and (min-width: $min_tablet) {
     @include fontRegular(18px, 400, 22.5px);
   }
