--- a/components/Calculator/ParentsAndChildren/ParentsTables/Table/Table.module.scss
+++ b/components/Calculator/ParentsAndChildren/ParentsTables/Table/Table.module.scss
@@ -17,6 +17,9 @@
   @media all and (min-width: $min_tablet) {
     font-size: 28px;
   }
+  @media all and (min-width: $min_desktop) {
+    font-size: 24px;
+  }
 }
 
 .column_names_list {
