--- a/components/Main/About/About.module.scss
+++ b/components/Main/About/About.module.scss
@@ -190,6 +190,8 @@
 .about_us_fact4 {
   border: 1px solid $accent_v2;
   grid-area: 3 / 1 / 4 / 2;
+  padding: 20px 0;
+  justify-content: center;
 }
 
 .spot {
