--- a/components/Main/Hero/Marquees/Marquees.module.scss
+++ b/components/Main/Hero/Marquees/Marquees.module.scss
@@ -3,10 +3,11 @@
 .marqueesContainer {
   position: absolute;
   max-width: 100vw;
-  bottom: -5%;
+  bottom: 0%;
   left: 0;
+  z-index: 3;
   @media all and (min-width: $min_tablet) {
-    bottom: 2%;
+    bottom: 4%;
   }
   @media all and (min-width: $min_desktop) {
     bottom: 3.5%;
@@ -16,6 +17,7 @@
 .text {
   @include fontRegular(14px, 400, 19.5px);
   padding: 12px 10px;
+  text-transform: uppercase;
   &_dark {
     @include fontRegular(14px, 400, 19.5px, $third_text_color);
     padding: 12px 10px;
@@ -26,6 +28,7 @@
     &_dark {
       @include fontRegular(18px, 400, 25.2px, $third_text_color);
       padding: 18px 10px;
+      text-transform: uppercase;
     }
   }
   @media all and (min-width: $min_desktop) {
