translated therapy sessions in services

--- a/components/TherapySessions/IndividualSessions/IndividualSessions.module.scss
+++ b/components/TherapySessions/IndividualSessions/IndividualSessions.module.scss
@@ -46,6 +46,11 @@
     padding: 64px 54px;
     width: 737px;
   }
+  &_ru {
+    @media screen and (min-width: $min_desktop) {
+      padding: 42px 54px;
+    }
+  }
 }
 
 .image {
