--- a/components/Header/MobileNav/MobileNav.module.scss
+++ b/components/Header/MobileNav/MobileNav.module.scss
@@ -63,6 +63,9 @@
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &_ru {
+    font-size: 14px;
+  }
 }
 
 .backdrop {
