--- a/components/Education/KarmologistPageTariffs/TariffsSlider/TariffsSlider.module.scss
+++ b/components/Education/KarmologistPageTariffs/TariffsSlider/TariffsSlider.module.scss
@@ -25,12 +25,14 @@
 
 .card_title {
   position: relative;
+  display: flex;
+  justify-content: center;
   width: 257px;
-  padding: 30px 20px;
+  padding: 30px 0px;
 
   border-radius: 30px;
   background-image: linear-gradient(270deg, #cfb691 -135.76%, #000 102.98%);
-  @include fontRegular(24px, 400, 24px, $main_text_color, center);
+  @include fontRegular(20px, 400, 20px, $main_text_color, center);
   z-index: 0;
   transform: translateY(15px);
   @media all and (min-width: $min_tablet) {
@@ -55,7 +57,6 @@
   z-index: 2;
   @media screen and (min-width: $min_tablet) {
     padding: 40px 48px;
-
   }
   @media all and (min-width: $min_desktop) {
   }
@@ -178,6 +179,12 @@
   }
   @media all and (min-width: $min_desktop) {
     display: none;
+  }
+  &_ru {
+    font-size: 20px;
+    @media all and (min-width: $min_tablet) {
+      font-size: 24px;
+    }
   }
 }
 
