--- a/components/Calculator/TalismanMatrix/TalismanMatrix.module.scss
+++ b/components/Calculator/TalismanMatrix/TalismanMatrix.module.scss
@@ -4,6 +4,7 @@
   border-top: 1px solid $seconds_text_color;
   border-bottom: 1px solid $seconds_text_color;
   background: $matrix_bg_gradient;
+  overflow: visible;
 }
 
 .talisman_of_matrix_wrapper {
