--- a/components/HumanPsychology/Hero/Hero.module.scss
+++ b/components/HumanPsychology/Hero/Hero.module.scss
@@ -7,10 +7,16 @@
 .title {
   @include fontRegular(32px, 400, 44.8px, $main_text_color, center);
   text-wrap: balance;
+  &_ru{
+    font-size: 30px;
+  }
   @media all and (min-width: $min_tablet) {
     @include fontRegular(48px, 400, 48px, $main_text_color, center);
   }
   @media all and (min-width: $min_desktop) {
     @include fontRegular(64px, 400, 89.6px, $main_text_color, center);
+    &_ru {
+      font-size: 58px;
+    }
   }
 }
