--- a/components/Main/About/About.module.scss
+++ b/components/Main/About/About.module.scss
@@ -113,6 +113,21 @@
   }
 }
 
+.about_us_element {
+  display: flex;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  & > svg {
+    width: 24px;
+    height: 24px;
+    padding: 5px 8px;
+    fill: $seconds_text_color;
+  }
+}
+
 .about_us_text {
   @include fontRegular(18px, 400, 25.2px);
 }
