--- a/components/Products/BuyGiftModalForm/BuyGiftModalForm.module.scss
+++ b/components/Products/BuyGiftModalForm/BuyGiftModalForm.module.scss
@@ -11,7 +11,7 @@
   background-color: #131313;
   overflow-y: auto;
   @media all and (min-width: $min_tablet) {
-    padding: 50px;
+    padding: 200px 50px 50px;
     max-width: 510px;
   }
 }
