--- a/components/Calculator/CompatibilityMatrix/ResultMatrix/ResultLifeMap/ResultLifeMap.module.scss
+++ b/components/Calculator/CompatibilityMatrix/ResultMatrix/ResultLifeMap/ResultLifeMap.module.scss
@@ -66,7 +66,9 @@
   color: #131313;
   background-color: $additional_bg;
 }
-
+.key_text {
+  text-transform: capitalize;
+}
 //духовний урок
 
 .spirit_wrapper {
