--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -17,6 +17,9 @@ $accent_v2: #cfb691;
 $matrix_bg_gradient: linear-gradient(270deg, #cfb691 -135.76%, #000 102.98%);
 $matrix_table_border: #7e7e7e;
 $tips_bg: #393939;
+$active_key: #1f1f1f;
+$modal_layout: rgba(0, 0, 0, 0.6);
+$modal_bg: #131313;
 
 //sizes
 
