added navigation buttons in modal of regression calc

--- a/components/Calculator/RegressionMatrix/RegressionGraph/ModalWindow/Content/Channels/Channels.module.scss
+++ b/components/Calculator/RegressionMatrix/RegressionGraph/ModalWindow/Content/Channels/Channels.module.scss
@@ -1,5 +1,12 @@
 @import '/styles/main.scss';
 
+.main_wrapper {
+  padding-bottom: 40px;
+  @media all and (min-width: $min_desktop) {
+    padding-bottom: 0px;
+  }
+}
+
 .buttons_wrapper {
   padding: 40px 0px;
 }
